<resources>
    <string name="app_name">Mobile Test</string>
    <string name="action_settings">Settings</string>


    <string name="guide_regist">立即注册</string>
    <string name="regist">注册</string>
    <string name="guide_login">登录</string>
    <string name="guide_seesee">随便看看</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_code">请输入验证码</string>
    <string name="get_regcode">重新获取</string>
    <string name="set_password">请设置密码</string>
    <string name="regist_now">立即申请</string>
    <string name="regist_des">或免注册使用其他帐号登录</string>
    <string name="hezu_help_pay">代付</string>
    <string name="title_activity_single_conversation">SingleConversationActivity</string>


    <string name="image_desc">No Desc</string>


    <!-- 公共-->
    <string name="common_no_sdcard">无存储卡,请插入存储卡后再试</string>
    <string name="common_today">今天</string>
    <string name="common_yesterday">昨天</string>
    <string name="common_tomorrow">明天</string>
    <string name="common_before_yesterday">前天</string>
    <string name="common_before_yesterday_2">昨天之前</string>
    <string name="common_after_tomorrow">后天</string>
    <string name="common_copy">复制</string>
    <string name="common_paste">粘贴</string>
    <string name="common_delete">删除</string>
    <string name="common_unknown">未知</string>
    <string name="common_not">无</string>
    <string name="common_china_mobile">中国移动</string>
    <string name="common_china_unicom">中国联通</string>
    <string name="common_china_telecom">中国电信</string>
    <string name="common_cancel">取消</string>
    <string name="common_prompt">提示</string>
    <string name="common_ok">确定</string>
    <string name="common_delay_ms">%1$s ms</string>
    <string name="common_test_item">开始测试 %1$s ...</string>
    <string name="common_ping_test_start">开始ping测试 ...</string>
    <string name="common_video_test_start">视频测试开始 ...</string>
    <string name="common_webpage_test_start">网页测试开始 ...</string>
    <string name="common_test_finish">测试结束</string>
    <string name="common_other">其他</string>
    <string name="common_share">分享</string>
    <string name="common_clear_cache">清除缓存</string>
    <string name="common_version_update">版本更新</string>
    <string name="common_version_update_s">版本更新%1$s</string>
    <string name="common_about">关于</string>
    <string name="common_mobile">手机</string>
    <string name="common_mobile_number">手机%1$s</string>
    <string name="common_mobile_unknow">手机（暂时无法获取手机号）</string>
    <string name="common_share_title">MobileTest是一个测试网络速度的App，界面新颖，功能齐全.</string>


    <!-- 无网络情况 -->
    <string name="test_net_setting">未发现手机网络。前往设置？</string>
    <string name="test_cant_conn_net">无法连接网络</string>
    <string name="test_setting_net_title">设置网络</string>

    <!-- 测试项-->
    <string name="test_type_webpage">网页测试</string>
    <string name="test_type_video">视频测试</string>
    <string name="test_type_voice">语音测试</string>
    <string name="test_type_speed">速度测试</string>
    <string name="test_type_conn">连接测试</string>
    <string name="test_type_synthesize">综合测试</string>
    <string name="test_type_one_key_test">一键测试</string>
    <string name="test_type_task_test">任务测试</string>
    <string name="test_type_report">问题反馈</string>
    <string name="test_type_test_result">测试结果</string>
    <string name="test_type_test_stat">测试统计</string>

    <string name="test_type_unknow">未知测试</string>
    <string name="test_start">开始测试</string>
    <string name="test_restart">重新开始测试</string>
    <string name="test_stop">停止测试</string>

    <string name="test_webpage">网页</string>
    <string name="test_voice">语音</string>
    <string name="test_video">视频</string>
    <string name="test_speed">速度</string>
    <string name="test_ping">连接</string>
    <string name="test_synthesize">综合</string>

    <!-- 测试速度级别-->
    <string name="test_speed_level_faster">很快</string>
    <string name="test_speed_level_general">一般</string>
    <string name="test_speed_level_slow">慢</string>
    <string name="test_speed_level_very_slow">很慢</string>
    <string name="test_speed_level_timeout">超时</string>
    <string name="test_speed_level_customer">您的网速%1$s</string>

    <!-- 显示速度的级别文案-->
    <string name="test_speed_faster">亲！您当前的网络环境令人神往！</string>
    <string name="test_speed_better">亲！您当前的网络环境妥妥的！</string>
    <string name="test_speed_general">亲，您当前所在的网络环境马马虎虎！</string>
    <string name="test_speed_slow">亲！您当前所在的网络很一般！</string>


    <!-- 测试网站名称-->
    <string name="test_website_10086">移动</string>
    <string name="test_website_baidu">百度</string>
    <string name="test_website_tencent">腾讯</string>
    <string name="test_website_youku">优酷</string>
    <string name="test_website_sina">新浪</string>
    <string name="test_website_taobao">淘宝</string>

    <!-- 测试网站网址-->
    <string name="test_10086_url">http://www.10086.cn</string>
    <string name="test_baidu_url">http://www.baidu.com</string>
    <string name="test_tencent_url">http://www.qq.com</string>
    <string name="test_youku_url">http://www.youku.com</string>
    <string name="test_sina_url">http://www.sina.com.cn</string>
    <!--<string name="test_taobao_url">http://re.1688.com/</string>-->
    <string name="test_taobao_url">http://www.1688.com/</string>

    <!-- 问题报告-->
    <string name="report_data_problem">数据业务问题</string>
    <string name="report_scroll_selected">上下滑动勾选问题类型</string>
    <string name="report_voice_problem">语音业务问题</string>
    <string name="report_no_data">脱网（无信号，无网络）</string>
    <string name="report_cant_data_problem">无法开始数据业务</string>
    <string name="report_data_stop">数据业务中断</string>
    <string name="report_website_cant_open">某个网站无法打开</string>
    <string name="report_app_cant_connection">某个应用无法联网</string>
    <string name="report_no_signal">无信号无网络导致脱网</string>
    <string name="report_have_signal_cant_call">有网络无法呼叫且网络送忙音</string>
    <string name="report_have_signal_cant_call_2">有网络无法呼叫且网络送暂时无法接通</string>
    <string name="report_calling_stop">通话过程中断</string>
    <string name="report_silence_call">单通</string>
    <string name="report_echo">回音</string>
    <string name="report_crosstalk">串话</string>
    <string name="report_voice_quality">话音质量差本方听不清对方</string>
    <string name="title_activity_web_page_test_details">历史详情</string>

    <string name="plus_profile">个人资料</string>
    <string name="plus_notify_set">提醒设置</string>
    <string name="plus_report">问题反馈</string>
    <string name="plus_contacts_us">联系我们</string>
    <string name="plus_app_update">版本更新</string>
    <string name="plus_settings">设置</string>


    <!--侧滑drawer-->
    <string name="sys_info">系统信息</string>


    <string name="media_ejected">储存卡已拔出，语音功能将暂时不可用</string>
    <string name="title_activity_synthesize">综合测试</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="title_activity_mobile_info">MobileInfoActivity</string>

    <!--手机信息-->
    <string name="test_mobile_brand">品牌</string>
    <string name="test_mobile_model">型号</string>
    <string name="test_mobile_version">系统版本</string>
    <string name="test_mobile_device_id">手机识别码</string>
    <string name="test_mobile_net_type">当前手机网络</string>
    <string name="test_mobile_operators">运营商</string>
    <string name="test_mobile_signals">信号强度</string>
    <string name="test_mobile_lac">LAC</string>
    <string name="test_mobile_ci">CI</string>
    <string name="test_mobile_total_mem">手机总内存</string>
    <string name="test_mobile_avail_mem">手机可用内存</string>

    <!--提示信息-->
    <string name="test_version_update_tips">正在检查新版本，请稍后...</string>
    <string name="test_version_latest">当前已经是最新版本</string>
    <string name="test_ping_test_start">Ping测试开始...</string>


</resources>
