<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ebebeb"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="66dp"
        android:background="#fff"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/my_new_phone"
            style="@style/text_second_style"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginTop="0.7dp"
            android:layout_weight="1"
            android:background="#fff"
            android:hint="@string/input_code"
            android:inputType="phone"
            android:paddingLeft="13dp"
            android:singleLine="true"
            android:textColorHint="@color/help_font_color" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:paddingRight="7.2dp">

            <TextView
                android:id="@+id/get_msg"
                android:layout_width="92dp"
                android:layout_height="27dp"
                android:layout_marginRight="7.2dp"
                android:background="@color/color_yellow"
                android:gravity="center"
                android:text="@string/get_regcode"
                android:textColor="#fff"
                android:textSize="@dimen/mtext"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <com.huhuo.mobiletest.view.EditTextWithDel
        android:id="@+id/input_short_msg"
        style="@style/text_second_style"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="0.7dp"
        android:background="#fff"
        android:hint="@string/set_password"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:singleLine="true"
        android:textColorHint="@color/help_font_color" />

    <Button
        android:id="@+id/btn_regist"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_guide_login"
        android:text="@string/regist" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/regist_now"
        android:textColor="#ccc"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="7dp"
            android:layout_weight="1"
            android:background="#999" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regist_des"
            android:textColor="#999"
            android:textSize="12sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="44dp"
            android:layout_weight="1"
            android:background="#999" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_qq_login"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_marginRight="19dp"
            android:background="@drawable/vp_login_qq" />


        <ImageView
            android:id="@+id/iv_weixin_login"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_marginLeft="19dp"
            android:background="@drawable/vp_login_weixin" />

    </LinearLayout>

</LinearLayout>