<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/color_white"
    >

    <RelativeLayout
        android:id="@+id/sys_info_layout"
        android:layout_width="match_parent"
        android:layout_height="38.67dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        style="@style/ViewRippleStyle"
        >
        <ImageView
            android:id="@+id/iv_sys_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sys_info_icon"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/btn_sys_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/sys_info"
            android:layout_toRightOf="@id/iv_sys_info"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/share_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        style="@style/ViewRippleStyle"
        >
        <ImageView
            android:id="@+id/iv_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share_small_icon"
            android:gravity="center"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/btn_sys_info2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/common_share"
            android:layout_toRightOf="@id/iv_share"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/clear_cache_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        style="@style/ViewRippleStyle"
        >
        <ImageView
            android:id="@+id/iv_clear_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/clear_cache_icon"
            android:gravity="center"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/tv_clear_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/common_clear_cache"
            android:layout_toRightOf="@id/iv_clear_cache"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/update_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        style="@style/ViewRippleStyle"
        >
        <ImageView
            android:id="@+id/iv_version_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/version_update_icon"
            android:gravity="center"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/tv_version_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/common_version_update"
            android:layout_toRightOf="@id/iv_version_update"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/about_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        style="@style/ViewRippleStyle"
        android:visibility="gone"
        >
        <ImageView
            android:id="@+id/iv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/about_icon"
            android:gravity="center"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/tv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/common_about"
            android:layout_toRightOf="@id/iv_about"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/mobile_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        style="@style/ViewRippleStyle"
        >
        <ImageView
            android:id="@+id/iv_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mobile_icon"
            android:gravity="center"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/tv_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/common_mobile"
            android:layout_toRightOf="@id/iv_mobile"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>



</LinearLayout>