<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test_bg"
    tools:context="com.huhuo.mobiletest.ui.fragment.OneKeyTestFragment"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="5dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/FragmentTitleStyle"
            android:background="@color/transparent"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/phone_info_layout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/phone_info_bg"
        android:layout_marginTop="40dp"
        android:layout_below="@id/toolbar"
        >
        <TextView
            android:id="@+id/tv_phone_info_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SIM卡可用\n运营商：中国联通\nSIM卡可用\n运营商：中国联通\n"
            android:textColor="@color/color_white"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_marginLeft="50dp"
            />
        <TextView
            android:id="@+id/tv_phone_info_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="SIM卡可用\n运营商：中国移动"
            android:textColor="@color/color_white"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:visibility="gone"
            />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/test_layout_1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_below="@id/phone_info_layout"
        android:layout_marginTop="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >

        <ImageButton
            android:id="@+id/btn_webpage_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_type_webpage"
            android:background="@drawable/selector_webpage_test"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            />

        <ImageButton
            android:id="@+id/synthesize_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_synthesize_test"
            android:layout_centerHorizontal="true"
            />

        <ImageButton
            android:id="@+id/btn_speed_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_type_speed"
            android:background="@drawable/selector_speed_test"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/test_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/test_layout_1"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >

        <ImageButton
            android:id="@+id/btn_video_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_video_test"
            android:layout_weight="1"
            />

        <ImageButton
            android:id="@+id/btn_voice_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_type_voice"
            android:background="@drawable/selector_voice_test"
            android:layout_weight="1"
            android:layout_centerHorizontal="true"
            />

        <ImageButton
            android:id="@+id/btn_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_type_conn"
            android:background="@drawable/selector_conn_test"
            android:layout_weight="1"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>




</RelativeLayout>

